FDG-5443 Using pseudo bold to get around position shifting bug

--- a/src/layouts/explainer/explainer-helpers/explainer-helpers.module.scss
+++ b/src/layouts/explainer/explainer-helpers/explainer-helpers.module.scss
@@ -3,11 +3,13 @@
 .nationalDebtActive {
   border-left-color: $debt-explainer-secondary !important;
   color: $debt-explainer-primary !important;
-  font-weight: bold;
+  text-shadow: 0 0 .01px $debt-explainer-primary, 0 0 .01px $debt-explainer-primary, 0 0 .01px $debt-explainer-primary;
 }
 
 .nationalDebtHover {
   color: $debt-explainer-secondary !important;
-  font-weight: bold;
   text-decoration: none;
+  text-shadow: 0 0 .01px $debt-explainer-primary, 0 0 .01px $debt-explainer-primary, 0 0 .01px $debt-explainer-primary;
 }
+
+
